# chunking

./: README.md  chunking.py  pyproject.toml  requirements.txt
tests/: test_chunking.py
