[project]
name = "chunking"
requires-python = "~=3.8"
dependencies = ["llama-index-embeddings-huggingface==0.2.0",
		"llama-index==0.10.31"]
version = "0.0.0"

[project.optional-dependencies]
dev = [
    "importlib_resources==6.1.3",
    "pytest~=7.3.2",
    "black==23.3.0",
    "isort==5.12.0",
    "ruff==0.0.265",
    "pre-commit>=3.3.2",
    "jupyterlab>=4.0.0",
    "jupyterlab-code-formatter>=2.2.1",
]
